# asl-recogintion

./: .env.example  .gitignore  README.md  pyproject.toml
asl-ui/: package-lock.json  package.json  tailwind.config.ts
asl-ui/src/app/: globals.css  layout.tsx  page.tsx
asl-ui/src/app/dashboard/: layout.tsx  page.tsx
asl-ui/src/app/login/: page.tsx
asl-ui/src/lib/: api.ts  auth-store.ts
asl-ui/src/types/: api.ts
configs/: model.yaml  training.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: calibrate_fallback_av.py  generate_tiny_av_dataset.py  smoke_predict_av.py
src/asl/application/dto/: predict_request.py  train_request.py
src/asl/application/events/: training_events.py
src/asl/application/services/: inference_service.py  training_service.py
src/asl/application/use_cases/: evaluate_model.py  predict_sign.py  prepare_data.py  train_model.py
src/asl/config/: container.py  settings.py
src/asl/domain/entities/: prediction_result.py  sign_class.py  training_result.py
src/asl/domain/exceptions/: domain_exceptions.py
src/asl/domain/interfaces/: backbone_strategy.py  dataset_repository.py  hand_detector.py  model_repository.py  preprocessor.py
src/asl/infrastructure/hand_detection/: mediapipe_detector.py
src/asl/infrastructure/ml/: model_builder.py  model_factory.py  training_engine.py
src/asl/presentation/api/: app.py
tests/e2e/: test_api.py
tests/unit/application/: test_event_bus.py  test_model_builder.py  test_predict_use_case.py
tests/unit/domain/: test_api_key_handler.py  test_jwt_handler.py  test_prediction_result.py  test_sign_class.py
(+21 files in other folders)
